src/snapshots/brooks_cli__test__cli_tests__interp_test_reqs.snap
---
source: src/test.rs
info:
  program: brooks-cli
  args:
    - interpret
    - "--path"
    - tests/reqs.mel
---
success: true
exit_code: 0
----- stdout -----
"GET"
[4mLogs:[0m
[33mTrace[0m: [4m0 to 10[0m: Evaluating member access expression
[33mTrace[0m: [4m0 to 3[0m: Evaluating identifier expression


----- stderr -----
