src/snapshots/brooks_cli__test__cli_tests__interp_test_reqs_name.snap
---
source: src/test.rs
info:
  program: brooks-cli
  args:
    - interpret
    - "--path"
    - tests/struct_name.mel
---
success: true
exit_code: 0
----- stdout -----
Type: req, Field Values: h: Type: h, Field Values: None, method: "GET", scheme: "http", uri: Type: uri, Field Values: path: "/", query: ""
[4mLogs:[0m
[33mTrace[0m: [4m0 to 3[0m: Evaluating identifier expression


----- stderr -----
