src/snapshots/brooks_cli__test__cli_tests__no_domain_feature_test.snap
---
source: src/test.rs
info:
  program: brooks-cli
  args:
    - hmds-server
    - "--port"
    - "8081"
    - "--timeout"
    - 25s
    - "--user"
    - testing_user
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: unexpected argument '--user' found

Usage: brooks-cli hmds-server --port <PORT> --timeout <TIMEOUT>

For more information, try '--help'.
