src/snapshots/brooks_cli__test__cli_tests__simple_test.snap
---
source: src/test.rs
info:
  program: brooks-cli
  args:
    - compile
    - "--path"
    - tests/simple.mel
---
success: true
exit_code: 0
----- stdout -----
Binary Expression:
	Left:
		Literal: "testing"
	Operation: concat
	Right:
		Literal: "one"

----- stderr -----
